# Garmin1000

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
core/: Autopilot.h  CMakeLists.txt  ConsoleFlightDataObserver.h  ConsoleObserver.h  FlightData.h  FlightDataSubject.h  IAutopilot.h  IFlightControls.h  IFlightDataObserver.h  IFlightDataSource.h  PrimaryFlightDisplay.h  QtFlightDataObserver.h
sources/: Autopilot.cpp  CMakeLists.txt  ConsoleFlightDataObserver.cpp  ConsoleObserver.cpp  PrimaryFlightDisplay.cpp  QtFlightDataObserver.cpp  SimulatedSource.cpp  SimulatedSource.h
